--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-auto-correction-system",
+  "name": "ai-text-enhancer",
   "version": "1.0.0",
   "description": "AI-driven auto-correction and enhancement system",
   "main": "server.js",
